--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -129,7 +129,6 @@ set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.8.57;
-set_real_ip_from 141.147.97.190;
 set_real_ip_from 141.98.11.62;
 set_real_ip_from 142.171.12.88;
 set_real_ip_from 142.44.133.81;
@@ -263,7 +262,6 @@ set_real_ip_from 185.106.102.102;
 set_real_ip_from 185.107.57.64;
 set_real_ip_from 185.107.57.65;
 set_real_ip_from 185.107.57.66;
-set_real_ip_from 185.107.96.192;
 set_real_ip_from 185.112.144.11;
 set_real_ip_from 185.112.146.167;
 set_real_ip_from 185.113.128.30;
@@ -853,7 +851,6 @@ set_real_ip_from 212.73.134.204;
 set_real_ip_from 212.95.50.77;
 set_real_ip_from 212.95.54.78;
 set_real_ip_from 213.252.140.118;
-set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.221.131;
@@ -876,6 +873,7 @@ set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
+set_real_ip_from 23.154.177.14;
 set_real_ip_from 23.154.177.15;
 set_real_ip_from 23.154.177.16;
 set_real_ip_from 23.154.177.17;
@@ -1035,7 +1033,6 @@ set_real_ip_from 2607:5300:60:566f::1;
 set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
 set_real_ip_from 2607:f130:0:ed:216:3cff:febd:3b42;
-set_real_ip_from 2607:f530:8002::19;
 set_real_ip_from 2620:18c:0:192::171;
 set_real_ip_from 2620:18c:0:192::172;
 set_real_ip_from 2620:18c:0:192::173;
@@ -1130,6 +1127,7 @@ set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
 set_real_ip_from 2a04:52c0:105:98a3::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394::1;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1593,6 +1591,7 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.227;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
@@ -1640,14 +1639,12 @@ set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.220.242.222;
 set_real_ip_from 66.78.40.182;
 set_real_ip_from 67.219.109.141;
-set_real_ip_from 71.171.89.62;
 set_real_ip_from 71.19.144.106;
 set_real_ip_from 71.19.144.128;
 set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.211.49.235;
 set_real_ip_from 72.235.129.116;
 set_real_ip_from 74.82.47.194;
-set_real_ip_from 74.91.123.105;
 set_real_ip_from 77.48.28.239;
 set_real_ip_from 77.81.247.72;
 set_real_ip_from 78.142.18.219;
