--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -12,6 +12,7 @@ allow 103.251.167.20;
 allow 104.167.242.116;
 allow 104.167.242.117;
 allow 104.167.242.118;
+allow 104.168.144.253;
 allow 104.192.3.74;
 allow 104.219.236.100;
 allow 104.244.72.115;
@@ -135,7 +136,6 @@ allow 142.171.12.88;
 allow 142.44.133.81;
 allow 142.44.234.69;
 allow 144.172.118.4;
-allow 144.172.118.41;
 allow 144.172.118.55;
 allow 144.172.118.73;
 allow 146.103.33.218;
@@ -1034,6 +1034,7 @@ allow 2607:5300:205:200::4894;
 allow 2607:5300:60:566f::1;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
+allow 2607:5501:3000:1dc::2;
 allow 2607:f130:0:ed:216:3cff:febd:3b42;
 allow 2620:18c:0:192::171;
 allow 2620:18c:0:192::172;
@@ -1371,6 +1372,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
@@ -1502,6 +1504,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1578,6 +1581,7 @@ allow 46.165.243.36;
 allow 46.182.21.248;
 allow 46.232.251.191;
 allow 46.234.47.105;
+allow 46.30.188.218;
 allow 50.6.204.90;
 allow 5.104.86.6;
 allow 51.15.59.15;
