--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -135,6 +135,7 @@ deny 142.171.12.88;
 deny 142.44.133.81;
 deny 142.44.234.69;
 deny 144.172.118.4;
+deny 144.172.118.41;
 deny 144.172.118.55;
 deny 144.172.118.73;
 deny 146.103.33.218;
@@ -700,6 +701,7 @@ deny 2001:41d0:700:10a2::;
 deny 2001:41d0:a:2a61::1;
 deny 2001:41d0:a:5c0::1;
 deny 2001:41d0:a:fe22::1;
+deny 2001:41d0:b:4ef::;
 deny 2001:470:1:908::9001;
 deny 2001:4b20:12:f001::105;
 deny 2001:4b98:dc0:47:216:3eff:fe3d:888c;
@@ -1114,6 +1116,7 @@ deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:98a3::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1339,6 +1342,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
 deny 2a0d:bbc7:0:1::320;
@@ -1451,6 +1455,7 @@ deny 31.220.75.237;
 deny 35.0.127.52;
 deny 37.120.239.59;
 deny 37.187.5.192;
+deny 37.187.56.239;
 deny 37.187.74.97;
 deny 37.228.129.128;
 deny 37.228.129.189;
@@ -1469,6 +1474,7 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
+deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
@@ -1524,6 +1530,7 @@ deny 45.80.158.27;
 deny 45.80.158.69;
 deny 45.8.22.207;
 deny 45.83.104.137;
+deny 45.83.21.193;
 deny 45.84.107.101;
 deny 45.84.107.172;
 deny 45.84.107.182;
@@ -1558,6 +1565,7 @@ deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.227;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
@@ -1663,7 +1671,6 @@ deny 89.234.157.254;
 deny 89.58.26.216;
 deny 89.58.41.156;
 deny 91.132.144.59;
-deny 91.139.160.150;
 deny 91.202.5.104;
 deny 91.203.144.194;
 deny 91.203.145.116;
